<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/add_playlist_bg"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/_135dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10dp"
            android:gravity="center"
            android:text="@string/name_your_playlist"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/playlist_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:gravity="center"
            android:hint="@string/my_playlist"
            android:textColor="@color/white"
            android:textColorHint="@color/color_hint_edit_text"
            android:textSize="@dimen/text_size_30"
            android:textStyle="bold" />

        <Button
            android:id="@+id/add_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/spotifyGreen"
            android:padding="@dimen/_10dp"
            android:text="@string/create"
            android:textSize="@dimen/text_size_14" />

    </LinearLayout>
</layout>