<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:orientation="vertical"
        tools:context=".ui.authentication.LoginFragment">

        <ImageView
            android:id="@+id/imageview"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="245dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/spotify_black_white" />

        <TextView
            android:id="@+id/textview1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/millions_of_songs"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:textStyle="bold"
            android:layout_marginBottom="@dimen/_10dp"
            android:maxLines="2"/>

        <Button
            android:id="@+id/freeSignUpButton"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/button_bg1"
            android:text="@string/sign_up_free"
            android:textAllCaps="false"

            android:textSize="20sp"
            android:textStyle="bold" />


<!--        <Button-->
<!--            android:id="@+id/googleSignUpButton"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="54dp"-->
<!--            android:layout_marginStart="20dp"-->
<!--            android:layout_marginEnd="20dp"-->
<!--            android:layout_marginBottom="20dp"-->
<!--            android:background="@drawable/button_bg2"-->
<!--            android:drawableStart="@drawable/google"-->
<!--            android:paddingHorizontal="20dp"-->
<!--            android:text="@string/continue_with_google"-->
<!--            android:textAllCaps="false"-->
<!--            android:textColor="@color/white"-->
<!--            android:textSize="20sp"-->
<!--            android:textStyle="bold" />-->

        <TextView
            android:id="@+id/loginTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/log_in"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />


    </LinearLayout>
</layout>

