<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.authentication.signupFragment"
            android:background="#121212"
            android:orientation="vertical">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:paddingVertical="15dp"
                >

                <TextView
                    android:layout_width="380dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text= "@string/sign_in"
                    android:textColor="@color/white"
                    android:textSize="28sp" />

                <Button
                    android:id="@+id/btn_back"
                    android:layout_width="31dp"
                    android:layout_height="31dp"
                    android:background="@drawable/ic_backarrow"
                    android:layout_gravity="bottom">
                </Button>

            </FrameLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="none">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"

                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/what_s_your_email"
                        android:textColor="@color/white"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/editTextTextEmailAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="30dp"
                        android:autofillHints=""
                        android:background="@drawable/edittext_background"
                        android:inputType="textEmailAddress"
                        android:padding="16dp"
                        android:textSize="20sp" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/password"
                        android:textColor="@color/white"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/editTextTextPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="30dp"
                        android:autofillHints=""
                        android:background="@drawable/edittext_background"
                        android:inputType="textPassword"
                        android:padding="16dp"
                        android:textSize="20sp" />

                    <Button
                        android:id="@+id/btn_sign_in"
                        android:layout_width="wrap_content"
                        android:layout_height="70dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="60dp"
                        android:background="@drawable/btn_background"
                        android:paddingHorizontal="45dp"
                        android:paddingVertical="20dp"
                        android:text="@string/sign_in"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold">

                    </Button>


                </LinearLayout>

            </ScrollView>

        </LinearLayout>
        <ProgressBar
            android:id="@+id/ProgressBar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:visibility="gone"
            android:indeterminateDrawable="@drawable/progress_bg"
            android:progress="0" />
    </FrameLayout>

</layout>