<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dialog_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#221e22">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_playlist"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/fragment_guideline_h_1"
            app:layout_constraintEnd_toStartOf="@+id/fragment_guideline_v_2"
            app:layout_constraintStart_toStartOf="@+id/fragment_guideline_v_1"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/cancel_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/fragment_guideline_h_1"
            app:layout_constraintEnd_toStartOf="@+id/fragment_guideline_v_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/save_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/fragment_guideline_h_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/fragment_guideline_v_2"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/img_playlist_cover"
            android:layout_width="@dimen/_135dp"
            android:layout_height="@dimen/_135dp"
            android:layout_margin="@dimen/_10dp"
            app:layout_constraintBottom_toTopOf="@+id/fragment_guideline_h_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_guideline_h_1"
            app:layout_constraintVertical_bias="0.1" />

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/ic_edit"
            app:layout_constraintBottom_toBottomOf="@id/img_playlist_cover"
            app:layout_constraintEnd_toEndOf="@id/img_playlist_cover"
            app:layout_constraintStart_toStartOf="@+id/img_playlist_cover"
            app:layout_constraintTop_toTopOf="@+id/img_playlist_cover" />

        <EditText
            android:id="@+id/edt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_50dp"
            android:layout_marginVertical="@dimen/_10dp"
            android:gravity="center_horizontal"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_30"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/fragment_guideline_v_2"
            app:layout_constraintStart_toStartOf="@+id/fragment_guideline_v_1"
            app:layout_constraintTop_toBottomOf="@+id/img_playlist_cover" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcvPlaylistSong"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="@dimen/_10dp"
            android:layout_marginTop="@dimen/_10dp"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edt_title" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/fragment_guideline_v_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.2" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/fragment_guideline_v_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.8" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/fragment_guideline_h_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/fragment_guideline_h_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.9" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>